--- a/src/base_control/package.xml
+++ b/src/base_control/package.xml
@@ -48,6 +48,8 @@
   <!--   <test_depend>gtest</test_depend> -->
   <!-- Use doc_depend for packages you need only for building documentation: -->
   <!--   <doc_depend>doxygen</doc_depend> -->
+
+
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>serial</build_depend>
@@ -58,6 +60,9 @@
   <exec_depend>roscpp</exec_depend>
   <exec_depend>serial</exec_depend>
   <exec_depend>std_msgs</exec_depend>
+  <exec_depend>rospy</exec_depend> 
+
+
 
 
   <!-- The export tag contains other, unspecified, tags -->
